gitrepo-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitrepo-volume-pod
spec:
  containers:
  - image: nginx:alpine
    name: web-server
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:
  - name: html
    gitRepo:     ## 创建一个gitRepo卷
      repository: https://github.com/luksa/kubia-website-example.git  ## 将指定git仓库克隆到卷
      revision: master  ## 检出主分支
      directory: .  ## 将repo克隆到卷的根目录
