kubia-liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-liveness
spec:
  containers:
  - image: luksa/kubia-unhealthy
    name: kubia
    livenessProbe:     #这是一个存活探针
      httpGet:
        path: /        #http请求的路径
        port: 8080     #探针连接的网络端口
