external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
sepc:
  type: ExternalName  ## 代码的type被设置为ExternalName
  externalName: someapi.somecompany.com  ## 实际服务的完全限定域名
  ports:
  - port: 80
