kubia-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kubia-loadbalancer
spec:
  type: LoadBalancer   ## 该服务从Kubernetes集群的基础架构获取负载均衡器
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
