kubia-svc-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
  - name: http
    port: 80
    targetPort: http #将端口80映射到容器中被称为http的端口
  - name: https
    port: 443
    targetPort: https #将端口443映射到容器中被称为https的端口
  selector:
    app: kubia
