kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kubia-nodeport
spec:
  type: NodePort  ## 为NodePort设置服务类型
  ports:
  - port: 80      ## 服务集群IP的端口号
    targetPort: 8080  ## 背后pod的目标端口号
    nodePort: 30123  ## 通过集群节点的30123端口可以访问该服务
  selector:
    app: kubia
