kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
  - port: 80 #该服务的可用端口
    targetPort: 8080  #服务将链接转发到的容器端口
  selector:
    app: kubia   #具有app=kubia标签的pod都属于该服务
