kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.example.com   ## ingress将域名kubia.example.com映射到你的服务
    http:
      paths:
      - path: /
        backend:              ## 将所有的请求发送到kubia-nodeport服务的80端口
          serviceName: kubia-nodeport
          servicePort: 80
